--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,11 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "declarationDir": "dist/esm",
     "noEmit": false,
     "outDir": "dist/esm",
-    "rootDir": "src",
-    "verbatimModuleSyntax": false
+    "rootDir": "src/lib",
+    "verbatimModuleSyntax": false,
+    "lib": ["ES2015", "DOM"],
   },
   "include": ["src/lib/**/*.ts"]
 }
