--- a/package.json
+++ b/package.json
@@ -1,48 +1,35 @@
 {
-  "name": "use-media-query",
-  "private": true,
+  "name": "@dbernardi/use-media-query",
   "version": "0.0.1",
   "type": "module",
   "description": "A custom React hook for managing javacript based media queries",
   "author": "Daniel Bernardi",
   "license": "MIT",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
-    }
-  },
-  "types": "./dist/esm/index.d.ts",
-  "files": [
-    "dist/*"
-  ],
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "lint": "eslint .",
+    "build": "tsup src/lib/index.ts --format cjs,esm --dts",
+    "release": "pnpm run build && changeset publish",
+    "lint": "tsc",
     "preview": "vite preview",
-    "build:esm": "tsc --build tsconfig.esm.json",
-    "build:cjs": "tsc --build tsconfig.cjs.json",
-    "prebuild": "rm -rf dist",
-    "build": "npm run build:esm && npm run build:cjs",
-    "postbuild": "./scripts/emit-package-json.sh"
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
+    "@changesets/cli": "^2.27.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.8.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "tsup": "^8.2.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vitest": "^2.0.5"
   }
 }
