--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "preview": "vite preview",
     "test": "vitest"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -31,6 +31,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
